--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,4 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Yao Yin's Homepage
+page-top-title: Yao Yin
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+copyright-text: '&copy; Yao Yin 2025. All Rights Reserved.'
